<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="ambient_display_title">Ambient Display</string>

    <string name="doze_trigger_title">When to show</string>
    <string name="doze_elements_title">What to show</string>
    <string name="gestures_title">Gestures</string>
    <string name="brightness_title">Brightness</string>

    <!-- Switch On/Off  -->
    <string name="switch_on_text">On</string>
    <string name="switch_off_text">Off</string>

    <!-- Battery percentage -->
    <string name="ambient_battery_percent_title">Battery level</string>
    <string name="ambient_battery_percent_summary">Show battery percent on the bottom of the screen</string>

    <!-- Always on display -->
    <string name="aod_setting_title">Always on</string>
    <string name="aod_setting_summary">Show time, notification icons and other info</string>
    <string name="doze_always_on_text">Always on display let\'s you check the time, notification icons and other info when the device is locked. Increases battery usage.</string>

    <!-- Always on while charging -->
    <string name="doze_on_charge_title">Always on (While charging)</string>
    <string name="doze_on_charge_summary">Always show ambient display while the device is charging</string>

    <!-- Ambient display -->
    <string name="ambient_display_notifications">New notifications</string>
    <string name="ambient_display_summary">Wake screen when you receive notifications</string>

    <!-- Ambient music ticker -->
    <string name="pulse_on_new_tracks_title">Music ticker</string>
    <string name="pulse_on_new_tracks_summary">Wake screen when a new music track is played</string>

    <!-- Tilt sensor -->
    <string name="pick_up_title">Pick up</string>
    <string name="pick_up_summary">Pick up your phone to check time, notification icons and other info</string>
    <string name="wake_gesture_title">Raise to wake</string>
    <string name="wake_gesture_summary">Pick up your phone to wake up the device instead of pulsing notifications</string>

    <!-- Proximity sensor -->
    <string name="hand_wave_gesture_title">Hand wave</string>
    <string name="hand_wave_gesture_summary">Wave hand above your phone to check time, notification icons and other info</string>
    <string name="pocket_gesture_title">Pocket</string>
    <string name="pocket_gesture_summary">Take out your phone from pocket to check time, notification icons and other info</string>

    <!-- Double tap -->
    <string name="doze_double_tap_title">Double tap to doze</string>
    <string name="doze_double_tap_summary">Double tap trigger doze instead of wake</string>

    <!-- Brightness -->
    <string name="doze_brightness_force_title">Force brightness values</string>
    <string name="doze_brightness_force_summary">Use custom brightness values instead of screen brightness</string>
    <string name="ambient_pulse_brightness_title">Ambient display</string>
    <string name="ambient_doze_brightness_title">Always on display</string>

    <!-- AOD Schedule -->
    <string name="always_on_display_schedule_title">Schedule</string>
    <string name="always_on_display_schedule_sunset">Sunset</string>
    <string name="always_on_display_schedule_sunrise">Sunrise</string>
    <string name="always_on_display_schedule_none">None</string>
    <string name="always_on_display_schedule_twilight">Turns on from sunset to sunrise</string>
    <string name="always_on_display_schedule_mixed_sunset">Turns on from sunset to a custom time</string>
    <string name="always_on_display_schedule_mixed_sunrise">Turns on from a custom time to sunrise</string>
    <string name="always_on_display_schedule_custom">Turns on at custom time</string>
    <string name="always_on_display_start_time_title">Start time</string>
    <string name="always_on_display_end_time_title">End time</string>

    <!-- Ambient Text -->
    <string name="ambient_category_title">Ambient Text</string>

    <string name="ambient_image_hide_type_title">Hide animation type</string>
    <string name="ambient_image_show_type_title">Show animation type</string>
    <string name="ambient_image_animation_type_pick">Pick a animation type</string>
    <string name="ambient_image_animation_alpha">Alpha</string>
    <string name="ambient_image_animation_slide_to_left">Slide to left</string>
    <string name="ambient_image_animation_slide_to_right">Slide to right</string>
    <string name="ambient_image_animation_slide_to_left_alpha">Slide to left + Alpha</string>
    <string name="ambient_image_animation_slide_to_right_alpha">Slide to right + Alpha</string>

    <string name="ambient_text_enabled_title">Ambient Text</string>
    <string name="ambient_text_enabled_summary">Enable a Custom Text in ambient screen</string>
    <string name="ambient_custom_text_title">Custom Text</string>

    <string name="ambient_text_custom_color_start_title">Start Color</string>
    <string name="ambient_text_custom_color_final_title">Final Color</string>

    <string name="ambient_text_vertical_location_title">Vertical Position</string>
    <string name="ambient_text_horizontal_location_title">Horizontal Position</string>
    <string name="ambient_text_rotation_title">Rotation</string>
    <string name="ambient_text_size_title">Font Size</string>
    <string name="ambient_text_font_title">Font</string>
    <string name="ambient_text_font_dialog_title">Select a Font</string>
    <string name="ambient_text_font_summary">Select a font for your ambient text</string>

    <string name="ambient_text_color_type_title">Color type</string>
    <string name="ambient_text_color_type_pick">Pick a Color type</string>
    <string name="ambient_text_color_type_accent">Color Accent</string>
    <string name="ambient_text_color_type_custom">Custom Color (Start)</string>
    <string name="ambient_text_color_type_gradient">Gradient (Start to Final)</string>
    <string name="ambient_text_color_type_lava_lamp">Lava Lamp</string>
    <string name="ambient_text_color_type_lava_lamp_custom">Lava Lamp with Custom Colors (Start to Final)</string>

    <string name="ambient_hide_keyguard_title">Hide Aod Content</string>
    <string name="ambient_hide_keyguard_summary">Hide clock, statusbar and more</string>
</resources>