<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License"
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/ambient_display_title"
    xmlns:settings="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="doze_elements"
        android:title="@string/doze_elements_title" >

        <com.syberia.settings.preference.SystemSettingSwitchPreference
            android:key="ambient_battery_percent"
            android:title="@string/ambient_battery_percent_title"
            android:summary="@string/ambient_battery_percent_summary"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="doze_trigger_key"
        android:title="@string/doze_trigger_title" >

        <com.syberia.settings.preference.SecureSettingMasterSwitchPreference
            android:key="always_on_ambient"
            android:defaultValue="false"
            android:title="@string/aod_setting_title"
            android:summary="@string/aod_setting_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.custom.ambient.display"
                android:targetClass="com.custom.ambient.display.AODSchedule" />
        </com.syberia.settings.preference.SecureSettingMasterSwitchPreference>

        <com.syberia.settings.preference.SystemSettingSwitchPreference
            android:key="doze_on_charge"
            android:defaultValue="false"
            android:title="@string/doze_on_charge_title"
            android:summary="@string/doze_on_charge_summary" />

        <SwitchPreference
            android:key="ambient_display"
            android:defaultValue="true"
            android:title="@string/ambient_display_notifications"
            android:summary="@string/ambient_display_summary" />

        <com.syberia.settings.preference.SystemSettingSwitchPreference
            android:key="pulse_on_new_tracks"
            android:defaultValue="true"
            android:title="@string/pulse_on_new_tracks_title"
            android:summary="@string/pulse_on_new_tracks_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="ambient"
        android:title="@string/ambient_category_title">

        <com.syberia.settings.preference.SystemSettingSwitchPreference
            android:key="ambient_hide_keyguard"
            android:title="@string/ambient_hide_keyguard_title"
            android:summary="@string/ambient_hide_keyguard_summary"
            android:defaultValue="false" />

        <com.syberia.settings.preference.SystemSettingSwitchPreference
            android:key="ambient_text_enabled"
            android:title="@string/ambient_text_enabled_title"
            android:summary="@string/ambient_text_enabled_summary"
            android:defaultValue="false" />

        <com.syberia.settings.preference.SystemSettingEditTextPreference
            android:key="ambient_custom_text"
            android:title="@string/ambient_custom_text_title"
            android:defaultValue="DerpFest" />

        <com.syberia.settings.preference.SystemSettingListPreference
            android:key="ambient_text_color_type"
            android:title="@string/ambient_text_color_type_title"
            android:dialogTitle="@string/ambient_text_color_type_pick"
            android:entries="@array/ambient_text_color_type_entries"
            android:entryValues="@array/ambient_text_color_type_values"
            android:summary="%s"
            android:defaultValue="0" />

        <net.margaritov.preference.colorpicker.ColorPickerSystemPreference
            android:key="ambient_text_custom_color_start"
            android:title="@string/ambient_text_custom_color_start_title"
            android:defaultValue="0xffffff" />

        <net.margaritov.preference.colorpicker.ColorPickerSystemPreference
            android:key="ambient_text_custom_color_final"
            android:title="@string/ambient_text_custom_color_final_title"
            android:defaultValue="0xffffff" />

        <com.syberia.settings.preference.CustomSystemSeekBarPreference
            android:key="ambient_text_vertical_location"
            android:title="@string/ambient_text_vertical_location_title"
            android:dependency="ambient_text_enabled"
            settings:allowEditText="true"
            android:max="100"
            settings:min="0"
            settings:units=""
            settings:interval="1"
            android:defaultValue="50" />

        <com.syberia.settings.preference.CustomSystemSeekBarPreference
            android:key="ambient_text_horizontal_location"
            android:title="@string/ambient_text_horizontal_location_title"
            android:dependency="ambient_text_enabled"
            settings:allowEditText="true"
            android:max="100"
            settings:min="0"
            settings:units=""
            settings:interval="1"
            android:defaultValue="50" />

        <com.syberia.settings.preference.CustomSystemSeekBarPreference
            android:key="ambient_text_rotation"
            android:title="@string/ambient_text_rotation_title"
            android:dependency="ambient_text_enabled"
            settings:allowEditText="true"
            android:max="360"
            settings:min="0"
            settings:units=""
            settings:interval="1"
            android:defaultValue="0" />

        <com.syberia.settings.preference.CustomSystemSeekBarPreference
            android:key="ambient_text_size"
            android:title="@string/ambient_text_size_title"
            android:dependency="ambient_text_enabled"
            settings:allowEditText="true"
            android:max="120"
            settings:min="0"
            settings:units="dp"
            settings:interval="1"
            android:defaultValue="24" />

        <com.syberia.settings.preference.SystemSettingListPreference
            android:key="ambient_text_font"
            android:title="@string/ambient_text_font_title"
            android:dialogTitle="@string/ambient_text_font_dialog_title"
            android:entries="@array/lock_clock_fonts_entries"
            android:entryValues="@array/lock_clock_fonts_values"
            android:summary="@string/ambient_text_font_summary"
            android:persistent="false" />

        <com.syberia.settings.preference.SystemSettingListPreference
            android:key="ambient_text_hide_type"
            android:title="@string/ambient_image_hide_type_title"
            android:dialogTitle="@string/ambient_image_animation_type_pick"
            android:entries="@array/ambient_image_animation_type_entries"
            android:entryValues="@array/ambient_image_animation_type_values"
            android:summary="%s"
            android:defaultValue="0" />

        <com.syberia.settings.preference.SystemSettingListPreference
            android:key="ambient_text_show_type"
            android:title="@string/ambient_image_show_type_title"
            android:dialogTitle="@string/ambient_image_animation_type_pick"
            android:entries="@array/ambient_image_animation_type_entries"
            android:entryValues="@array/ambient_image_animation_type_values"
            android:summary="%s"
            android:defaultValue="0" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="gestures"
        android:title="@string/gestures_title" >

        <com.syberia.settings.preference.SystemSettingSwitchPreference
            android:key="doze_trigger_doubletap"
            android:defaultValue="false"
            android:title="@string/doze_double_tap_title"
            android:summary="@string/doze_double_tap_summary" />

        <SwitchPreference
            android:key="pick_up"
            android:defaultValue="false"
            android:title="@string/pick_up_title"
            android:summary="@string/pick_up_summary" />

        <SwitchPreference
            android:key="gesture_raise_to_wake"
            android:defaultValue="false"
            android:title="@string/wake_gesture_title"
            android:summary="@string/wake_gesture_summary"
            android:dependency="pick_up" />

        <SwitchPreference
            android:key="gesture_hand_wave"
            android:defaultValue="false"
            android:title="@string/hand_wave_gesture_title"
            android:summary="@string/hand_wave_gesture_summary" />

        <SwitchPreference
            android:key="gesture_pocket"
            android:defaultValue="false"
            android:title="@string/pocket_gesture_title"
            android:summary="@string/pocket_gesture_summary" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="brightness"
        android:title="@string/brightness_title" >

        <com.syberia.settings.preference.SystemSettingSeekBarPreference
            android:key="ambient_doze_brightness"
            android:title="@string/ambient_doze_brightness_title"
            android:max="255"
            settings:min="1"
            android:persistent="false" />

        <com.syberia.settings.preference.SystemSettingSeekBarPreference
            android:key="ambient_pulse_brightness"
            android:title="@string/ambient_pulse_brightness_title"
            android:max="255"
            settings:min="1"
            android:persistent="false" />

        <com.syberia.settings.preference.SystemSettingSwitchPreference
            android:key="doze_brightness_force"
            android:title="@string/doze_brightness_force_title"
            android:summary="@string/doze_brightness_force_summary"
            android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>
